fix(control center): articles image cropped

--- a/src/pages/ControlCenter/index.module.scss
+++ b/src/pages/ControlCenter/index.module.scss
@@ -392,12 +392,12 @@
   .article-section {
     margin-top: 64px;
 
-    .article-section-wrapper-1 {
+    .apps-list-wrapper {
       display: grid;
       grid-template-columns: repeat(4, minmax(0, 1fr));
       gap: 1rem;
 
-      .article-section-wrapper-2 {
+      .apps-list {
         display: grid;
         grid-template-rows: repeat(2, minmax(0, 1fr));
       }
@@ -556,7 +556,7 @@
 
     .article-section {
       display: block;
-      .article-section-wrapper-1 {
+      .apps-list-wrapper {
         display: block;
       }
     }
